--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
+		"open": "cypress open",
+		"cypress": "cypress run",
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
@@ -37,6 +39,7 @@
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0"
+		"@testing-library/react": "^13.4.0",
+		"cypress": "^10.9.0"
 	}
 }
